--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,9 @@ jobs:
           python-version: '3.11'
 
       - name: Install requirements
-        run: python -m pip install -r requirements.txt
+        run: |
+          python -m pip install -r requirements-test.txt
+          python -m playwright install --with-deps
 
       - name: Run tests
         run: python -m pytest
