--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,6 +38,9 @@ jobs:
         with:
           # Upload entire repository
           path: './docs/output'
+      - name: move static
+        run: |
+          mv ./docs/static /
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
