--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+      - name: Run Render Engine
+        run: |
+          pip install -r docs/requirements.txt
+          render-engine build docs.app:app
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
