--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 dependencies = [
     'jinja2',
     'render-engine-tailwindcss==2023.7.1a2',
-    "render-engine>=2023.10.2a5"
+    "render-engine>=2023.10.2b2"
     ]
 
 [project.optional-dependencies]
