--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,8 @@ jobs:
         uses: actions/setup-python@v4
       - name: Run Render Engine
         run: |
-          pip install .
+          pip install -r requirements.txt
+          pip install render-engine-theme-kjaymiller
           render-engine build docs.app:app
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
