--- a/requirements.txt
+++ b/requirements.txt
@@ -34,13 +34,13 @@ pytailwindcss==0.2.0
     # via render-engine-tailwindcss
 python-dateutil==2.8.2
     # via render-engine
-python-frontmatter==1.0.0
+python-frontmatter==1.0.1
     # via render-engine
 python-slugify==8.0.1
     # via render-engine
 pyyaml==6.0.1
     # via python-frontmatter
-render-engine==2023.10.4
+render-engine==2023.11.1a1
     # via
     #   render-engine-tailwindcss
     #   render-engine-theme-kjaymiller (pyproject.toml)
