--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ readme = "README.md"
 
 dependencies = [
     'jinja2',
-    'render-engine-tailwindcss==2023.10.2',
-    "render-engine>=2023.11.1a3"
+    'render-engine-tailwindcss>=2023.12.1',
+    "render-engine>=2023.12.1b1"
     ]
 
 [project.optional-dependencies]
