--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 
 dependencies = [
     'jinja2',
-    'render-engine-tailwindcss>=2023.12.1',
+    'render-engine-tailwindcss',
     "render-engine>=2023.12.1b1"
     ]
 
