--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,11 +1,35 @@
 on: 
-    push:
-        branches: [ main ]
-    pull_request:
-
+  push:
+      branches: [ main ]
+  pull_request:
+permissions:
+  pull-requests: write
+  contents: write
 jobs:
-    lint:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v4
-        - uses: chartboost/ruff-action@v1
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install dependencies
+        uses: actions/setup-python@v4
+        with:
+            python-version: 3.12
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip
+            python -m pip install pip-tools
+            python -m piptools compile --extra=dev
+            python -m pip install -r requirements.txt
+      - name: Lint with ruff
+        run: |
+          python -m ruff check . --fix
+          python -m ruff format .
+      - name: Commit changes
+        run: |
+          if [ -n "$(git status --porcelain)" ]; then
+          git config --global user.name "Ruff"
+          git config --global user.email "ruff-action@users.noreply.github.com"
+          git add -A
+          git commit -m "Format and lint with Ruff"
+          git push origin HEAD:${{ github.event.pull_request.head.ref }}
+          fi
