--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ dev = [
     "ruff",
     ]
 
+docs = [
+    "render-engine-theme-kjaymiller==2023.12.1b2"
+]
+
 [tool.setuptools_scm]
 local_scheme = "no-local-version"
 
