--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run Render Engine
         run: |
           python -m pip install pip-tools
-          python -m pip-tools compile --upgrade --extra=dev --extra=docs
+          python -m pip-tools compile --upgrade --extra=dev
           python -m pip install -r requirements.txt
           python -m render-engine build docs.app:app
       - name: Upload artifact
