--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,9 +15,7 @@ jobs:
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
-            python -m pip install pip-tools
-            python -m piptools compile --extra=dev
-            python -m pip install -r requirements.txt
+            python -m pip install ruff 
       - name: Lint with ruff
         run: |
           python -m ruff check . --fix
