--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,6 @@
 on: 
-  push:
-      branches: [ main ]
   pull_request:
+  workflow_dispatch:
 permissions:
   pull-requests: write
   contents: write
@@ -17,9 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
-            python -m pip install pip-tools
-            python -m piptools compile --extra=dev
-            python -m pip install -r requirements.txt
+            python -m pip install ruff 
       - name: Lint with ruff
         run: |
           python -m ruff check . --fix
