--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,9 +37,10 @@ jobs:
         uses: actions/setup-python@v4
       - name: Run Render Engine
         run: |
-          pip install -r requirements.txt
-          pip install "render-engine-theme-kjaymiller==2023.10.2b2"
-          render-engine build docs.app:app
+          python -m pip install pip-tools
+          python -m pip-tools compile --upgrade --extra=dev
+          python -m pip install -r requirements.txt
+          python -m render-engine build docs.app:app
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
