--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,8 +37,7 @@ jobs:
         uses: actions/setup-python@v4
       - name: Run Render Engine
         run: |
-          python -m pip install pip-tools
-          python -m piptools compile --upgrade --extra=dev
+          python -m pip install --upgrade pip
           python -m pip install -e .
           python -m render-engine build docs.app:app
       - name: Upload artifact
