--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 dependencies = [
     'jinja2',
     'render-engine-tailwindcss',
+    'render-engine-markdown',
     "render-engine>=2023.12.1b2"
     ]
 
