--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: Install requirements
         run: |
-          python -m pip install -r requirements-test.txt
-          python -m playwright install --with-deps
+          python -m pip install -e ".[dev]"
 
       - name: Run tests
         run: python -m pytest
