--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     'jinja2',
     'render-engine-tailwindcss',
     'render-engine-markdown',
-    "render-engine>=2023.12.1b2"
+    "render-engine>=2024.1.1a2"
     ]
 
 [project.optional-dependencies]
