Add prefix to kjaymiller theme (#104)
* Add prefix to kjaymiller theme

* add tests back

* removes tailwind.config.js

* replace test with local install

* update pyproject version deps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: PyTest
 on:
   workflow_call:
-  # push:
-  #   branches:
-  #     - main
-  # pull_request:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   test-with-pytest:
@@ -18,8 +18,7 @@ jobs:
 
       - name: Install requirements
         run: |
-          python -m pip install -r requirements-test.txt
-          python -m playwright install --with-deps
+          python -m pip install -e ".[dev]"
 
       - name: Run tests
         run: python -m pytest
