--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ readme = "README.md"
 dependencies = [
     'jinja2',
     'render-engine-tailwindcss',
-    "render-engine>=2023.12.1b2"
+    'render-engine-markdown',
+    "render-engine>=2024.1.1a2"
     ]
 
 [project.optional-dependencies]
