--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -e .
-          python -m render-engine build docs.app:app
+          python -m render_engine build docs.app:app
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
