sets python version to 3.12

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Setup Python
         uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
       - name: Run Render Engine
         run: |
           python -m pip install --upgrade pip
