--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 
 dependencies = [
     'jinja2',
-    'render-engine-tailwindcss',
+    'render-engine-tailwindcss>=2024.1.1a2',
     'render-engine-markdown',
     "render-engine>=2024.1.1a2"
     ]
