--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
   'jinja2',
   'render-engine-tailwindcss>=2025.1.1a1',
   'render-engine-markdown',
-  'render-engine[cli]==2024.11.2a1',
+  'render-engine[cli]>=2024.11.2a1',
 ]
 
 [project.optional-dependencies]
