update header components

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ description = "This is a theme based on the design of kjaymiller.com at the time
 readme = "README.md"
 
 dependencies = [
-    'jinja2',
-    'render-engine-tailwindcss>=2024.1.1a2',
-    'render-engine-markdown',
-    "render-engine>=2025.6.1a1"
-    ]
+  'jinja2',
+  'render-engine-tailwindcss>=2025.1.1a1',
+  'render-engine-markdown',
+  'render-engine[cli]>=2024.11.2a1',
+]
 
 [project.optional-dependencies]
 dev = [
