--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Build distribution
 
-on: 
+on:
   release:
     types: [created]
-  
+
 jobs:
   # test:
   #   uses: ./.github/workflows/test.yml
@@ -11,22 +11,16 @@ jobs:
     name: Deploy to PyPI
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v6
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
         with:
-          python-version: 3.11
-
-      - name: Install build dependencies
-        run: python -m pip install build twine
-
-      - name: Build distributions
-        run: python -m build
-
-      - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+          enable-cache: "true"
+      - run: echo "SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct)" >> $GITHUB_ENV
+      # Allow prerelease if explicitly marked in pyproject.toml so we can prerelease in conjunction
+      # with engine updates.
+      - run: uv build --prerelease=explicit
+      - uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: __token__
-          password: ${{ secrets.TWINE_PASSWORD}}
+          packages-dir: ./dist
+
