--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,18 +36,18 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: 3.14
       - name: Run Render Engine
         run: |
           python -m pip install --upgrade pip
           python -m pip install -e .
           python -m render_engine build docs.app:app
-          
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: './docs/output'
+          path: "./docs/output"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
