--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,8 +8,10 @@ jobs:
   # test:
   #   uses: ./.github/workflows/test.yml
   deploy:
-    name: Deploy to PyPI
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    name: Deploy to PyPI
     steps:
       - uses: actions/checkout@v4
       - name: Install uv
@@ -23,4 +25,3 @@ jobs:
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: ./dist
-
